Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase00_08.out

Parse error on line 6:
... Swapper{		public int a;	public int b
---------------------^
Expecting 'static'